WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239744
[iOS] Infinite recursion at -[WKFullScreenWindowController _exitFullscreenImmediately]
https://bugs.webkit.org/show_bug.cgi?id=239744
Summary
[iOS] Infinite recursion at -[WKFullScreenWindowController _exitFullscreenImm...
Jer Noble
Reported
2022-04-25 15:56:24 PDT
[iOS] Infinite recursion at -[WKFullScreenWindowController _exitFullscreenImmediately]
Attachments
Patch
(10.43 KB, patch)
2022-04-25 16:30 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(9.88 KB, patch)
2022-05-05 10:14 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2022-04-25 15:56:39 PDT
<
rdar://74201964
>
Jer Noble
Comment 2
2022-04-25 16:30:53 PDT
Created
attachment 458309
[details]
Patch
Eric Carlson
Comment 3
2022-04-25 21:10:20 PDT
Comment on
attachment 458309
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=458309&action=review
> Source/WebCore/dom/FullscreenManager.cpp:116 > + INFO_LOG(LOGIDENTIFIER);
This happens infrequently enough I think it might as well use ALWAYS_LOG.
> Source/WebCore/dom/FullscreenManager.cpp:293 > + INFO_LOG(LOGIDENTIFIER);
Ditto
> Source/WebCore/dom/FullscreenManager.cpp:640 > + INFO_LOG(LOGIDENTIFIER, flag);
Ditto
> Source/WebCore/dom/FullscreenManager.cpp:658 > + INFO_LOG(LOGIDENTIFIER, flag);
Ditto
Jer Noble
Comment 4
2022-05-05 10:14:57 PDT
Created
attachment 458885
[details]
Patch for landing
EWS
Comment 5
2022-05-06 09:10:18 PDT
Committed
r293894
(
250352@main
): <
https://commits.webkit.org/250352@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458885
[details]
.
Ali Juma
Comment 6
2022-05-06 12:51:31 PDT
***
Bug 239076
has been marked as a duplicate of this bug. ***
Ali Juma
Comment 7
2022-05-06 12:51:48 PDT
***
Bug 239071
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug